--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,14 @@ services:
       - '6380:6380'
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    expose:
-      - '3000'
+    command: bash -c "bundle exec puma -C config/puma.rb"
     links:
       - db
       - redis
     volumes:
       - .:/myapp
     environment:
+      - VIRTUAL_HOST=web-app.docker
       - RAILS_ENV=production
       - POSTGRES_PASSWORD=Password*1
       - REDIS_URL_CACHING=redis://redis:6380/0
@@ -36,11 +35,10 @@ services:
     links:
       - db
       - redis
-  nginx:
-    build:
-      context: .
-      dockerfile: ./nginx.Dockerfile
+  proxy:
+    privileged: true
+    image: jwilder/nginx-proxy:latest
     ports:
       - "80:80"
-    depends_on:
-      - web
+    volumes:
+      - "/var/run/docker.sock:/tmp/docker.sock"
